syntax = "proto3";

import "Shared/Protos/search.proto";

package AssetApi;

service Asset {
    rpc Get (GetAssetQuery) returns (AssetResponse) {}
    rpc GetAll (GetAssetsQuery) returns (AssetsResponse) {}
}

message GetAssetQuery {
    string id = 1;
}

message GetAssetsQuery {
    SearchLibrary.SearchOptions search = 1;
}

message AssetsResponse {
    repeated AssetResponse assets = 1;
}

message AssetResponse {
    string id = 1;
    string symbol = 2;
    string name = 3;
    AssetType type = 4;
}

enum AssetType {
    Stock = 0;
}